force-app/main/default/objects/User/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1040</fullName>
                <label>Bommasandra Factory</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>Chennai</label>
            </value>
            <value>
                <fullName>4025</fullName>
                <label>Bangalore</label>
            </value>
            <value>
                <fullName>4043</fullName>
                <label>Hyderabad</label>
            </value>
            <value>
                <fullName>4046</fullName>
                <label>Vijayawada</label>
            </value>
            <value>
                <fullName>4085</fullName>
                <label>Kochin</label>
            </value>
            <value>
                <fullName>5016</fullName>
                <label>Mumbai</label>
            </value>
            <value>
                <fullName>5005</fullName>
                <label>Pune</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <label>Ahmedabad</label>
            </value>
            <value>
                <fullName>5030</fullName>
                <label>Goa</label>
            </value>
            <value>
                <fullName>2011</fullName>
                <label>Bhopal</label>
            </value>
            <value>
                <fullName>5024</fullName>
                <label>Raipur</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <label>Delhi</label>
            </value>
            <value>
                <fullName>2021</fullName>
                <label>Lucknow</label>
            </value>
            <value>
                <fullName>2025</fullName>
                <label>Ghaziabad</label>
            </value>
            <value>
                <fullName>2005</fullName>
                <label>Jaipur</label>
            </value>
            <value>
                <fullName>2054</fullName>
                <label>Mohali</label>
            </value>
            <value>
                <fullName>2050</fullName>
                <label>Ludhiana</label>
            </value>
            <value>
                <fullName>3000</fullName>
                <label>Kolkata</label>
            </value>
            <value>
                <fullName>3020</fullName>
                <label>JAMSHEDPUR MARKETING BRANCH</label>
            </value>
            <value>
                <fullName>3030</fullName>
                <label>Bhubaneswar</label>
            </value>
            <value>
                <fullName>3040</fullName>
                <label>Guwahati</label>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>3035</fullName>
                <label>PATNA MARKETING BRANCH</label>
            </value>
            <value>
                <fullName>3535</fullName>
                <label>PATNA SERVICE BRANCH</label>
            </value>
            <value>
                <fullName>3520</fullName>
                <label>JAMSHEDPUR SERVICE BRANCH</label>
            </value>
            <value>
                <fullName>JAMSHEDPUR MARKETING BRANCH</fullName>
                <isActive>false</isActive>
                <label>JAMSHEDPUR MARKETING BRANCH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>