force-app/main/default/objects/User/fields/maps__ActivityGenerationObjects__c.field-meta.xml
<CustomField>
    <fullName>maps__ActivityGenerationObjects__c</fullName>
    <label>Activity Generation Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>