force-app/main/default/objects/User/fields/maps__DistanceCalculationRule__c.field-meta.xml
<CustomField>
    <fullName>maps__DistanceCalculationRule__c</fullName>
    <label>Distance Calculation Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>