force-app/main/default/objects/User/fields/maps__EditTimesheetEntries__c.field-meta.xml
<CustomField>
    <fullName>maps__EditTimesheetEntries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Timesheet entries</label>
    <type>Checkbox</type>
</CustomField>