force-app/main/default/objects/User/fields/maps__RequireApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>maps__RequireApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Approval Process</label>
    <type>Checkbox</type>
</CustomField>