force-app/main/default/objects/User/fields/maps__TimesheetPeriod__c.field-meta.xml
<CustomField>
    <fullName>maps__TimesheetPeriod__c</fullName>
    <label>Timesheet Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>