force-app/main/default/objects/User/listViews/System_Admin_1.listView-meta.xml
<ListView>
    <fullName>System_Admin_1</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>system</value>
    </filters>
    <label>System Admin 1</label>
    <language>en_US</language>
</ListView>